--- a/Receitas/projeto_1couveParmegiana.html
+++ b/Receitas/projeto_1couveParmegiana.html
@@ -236,7 +236,8 @@
                                     <div class="conteudo">
                                         <h3>Parmegiana</h3>
                                         <p>
-                                            Cozinhe até que a couve-flor esteja no ponto desejado e, em seguida, coloque em um refratário.
+                                            Cozinhe até que a couve-flor esteja no ponto desejado e, em seguida, coloque
+                                            em um refratário.
                                         </p>
                                     </div>
                                     <div class="tempo">
@@ -258,7 +259,8 @@
                                     <div class="conteudo">
                                         <h3>Parmegiana</h3>
                                         <p>
-                                            Asse em forno preaquecido a 180 ºC até que o queijo esteja derretido e dourado.
+                                            Asse em forno preaquecido a 180 ºC até que o queijo esteja derretido e
+                                            dourado.
                                         </p>
                                     </div>
                                     <div class="tempo">
@@ -292,7 +294,8 @@
                             <h3 class="corForte">Passo 3</h3>
                             <p class="fst-normal corFraca">Adicione o vinagre e o sal. </p>
                             <h3 class="corForte">Passo 4</h3>
-                            <p class="fst-normal corFraca">Espere 2 minutos e, em seguida, coloque a couve-flor na água fria.</p>
+                            <p class="fst-normal corFraca">Espere 2 minutos e, em seguida, coloque a couve-flor na água
+                                fria.</p>
                             <h3 class="corForte">Passo 5</h3>
                             <p class="fst-normal corFraca">Escorra a água e corte os floretes. </p>
                             <h3 class="corForte">Passo 6</h3>
@@ -302,14 +305,16 @@
                             <h3 class="corForte">Passo 8</h3>
                             <p class="fst-normal corFraca">Mexa e adicione o azeite. </p>
                             <h3 class="corForte">Passo 9</h3>
-                            <p class="fst-normal corFraca">Cozinhe até que a couve-flor esteja no ponto desejado e, em seguida, coloque em um refratário</p>
+                            <p class="fst-normal corFraca">Cozinhe até que a couve-flor esteja no ponto desejado e, em
+                                seguida, coloque em um refratário</p>
                             <h3 class="corForte">Passo 10</h3>
                             <p class="fst-normal corFraca">Cubra com queijo mozzarella a gosto. </p>
                             <h3 class="corForte">Passo 11</h3>
-                            <p class="fst-normal corFraca">Asse em forno preaquecido a 180 ºC até que o queijo esteja derretido e dourado. </p>
+                            <p class="fst-normal corFraca">Asse em forno preaquecido a 180 ºC até que o queijo esteja
+                                derretido e dourado. </p>
                             <h3 class="corForte">Passo 12</h3>
                             <p class="fst-normal corFraca">Sirva e desfrute! </p>
-                           <!--  <ul class="corFraca">
+                            <!--  <ul class="corFraca">
                                 <li>Criamos a coluna "curso" na tabela "cursos".</li>
                                 <li>Renomeamos as colunas para o padrão PT-BR.</li>
                                 <li>Alteramos o formato da data.</li>
@@ -327,8 +332,8 @@
             <section id="scrollspyHeading3">
                 <div class="container text-center">
                     <h1 class="corForte">Resolução</h1>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IhUKu07aFkM?si=gF9GFlON866sOX9-"
-                        title="YouTube video player" frameborder="0"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/DwYialM5p_M"
+                        title="Couve Flor à Parmegiana | Delícias da Eleni" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
