--- a/Receitas/projeto_2GratinadoDeNabo.html
+++ b/Receitas/projeto_2GratinadoDeNabo.html
@@ -55,7 +55,7 @@
                     <h1 class="corForte">Gratinado de Nabo</h1>
                     <!-- como fazer 'nome da receita' -->
                     <h3 class=" corFraca"><span>Como fazer o seu Gratinado de Nabo</span></h3>
-                    <img src="../image/couvePrato.png" class="img-fluid" alt="...">
+                    <img src="../image/GratinadoDeNabo.jpeg" class="img-fluid" style="max-width: 500px; max-height: 350px;" alt="...">
                     <br>
                     <br><!--breve história do prato,  -->
                     <p>O Gratinado de Nabo é uma deliciosa receita que combina a simplicidade dos nabos com a riqueza do
@@ -181,8 +181,9 @@
                                     <div class="tempo">
                                         <h4>Passo 5</h4>
                                     </div>
+                                </li>
 
-                                    <div style="clear: both"></div>
+                                <div style="clear: both"></div>
                             </ul>
                         </section>
                     </section>
@@ -211,12 +212,14 @@
                             <h3 class="corForte">Passo 4</h3>
                             <ul class="corFraca">
                                 <li>Leve ao forno preaquecido a 200ºC.</li>
-                                <li>Asse até que o gratinado esteja dourado e borbulhante, conforme seu gosto pessoal.</li>
+                                <li>Asse até que o gratinado esteja dourado e borbulhante, conforme seu gosto pessoal.
+                                </li>
                             </ul>
                             <h3 class="corForte">Passo 5</h3>
                             <ul class="corFraca">
                                 <li>Retire do forno e sirva o Gratinado de Nabo quente.</li>
-                                <li>Desfrute deste prato incrivelmente saboroso e desfrute de uma explosão de sabores e texturas.</li>
+                                <li>Desfrute deste prato incrivelmente saboroso e desfrute de uma explosão de sabores e
+                                    texturas.</li>
                             </ul>
 
                         </div>
@@ -224,14 +227,18 @@
                 </div>
             </section>
             <hr>
+            
             <!-- vídeo -->
             <section id="scrollspyHeading3">
-                <div class="container text-center">
-                    <h1 class="corForte">Resolução</h1>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IhUKu07aFkM?si=gF9GFlON866sOX9-"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                <div class="container">
+                    <div class="container text-center mt-5">
+                        <h1 class="corForte">Resolução</h1>
+    
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/3bWJ9KRcAjk"
+                            title="COMO FAZER GRATINADO DE NABO" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
                 </div>
 
             </section>
