--- a/Receitas/projeto_3RisotoDePrimentaDeCheiro.html
+++ b/Receitas/projeto_3RisotoDePrimentaDeCheiro.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Parmegiana de Couve-flor</title>
+    <title>Risoto de Pimenta de Cheiro</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -52,15 +52,15 @@
             <section id="scrollspyHeading1" class="mt-5">
                 <div class="container text-center ">
                     <!-- titulo da receita -->
-                    <h1 class="corForte">Parmegiana de Couve-flor</h1>
+                    <h1 class="corForte">Risoto de Pimenta de Cheiro</h1>
                     <!-- como fazer 'nome da receita' -->
-                    <h3 class=" corFraca"><span>Como fazer o sua Parmegiana de Couve-flor?</span></h3>
-                    <img src="../image/couvePrato.png" class="img-fluid" alt="...">
+                    <h3 class=" corFraca"><span>Como fazer o seu Risoto de Pimenta de Cheiro?</span></h3>
+                    <img src="../image/Risoto.jpeg" class="img-fluid" alt="...">
                     <br>
                     <br><!--breve história do prato,  -->
-                    <p>A Parmegiana de Couve-flor é uma versão vegetariana e saudável da clássica parmegiana italiana.
-                        Substituindo a carne por couve-flor, esta receita oferece uma opção deliciosa e nutritiva para
-                        aqueles que buscam diversificar suas refeições.</p>
+                    <p>O Risoto de Pimenta de Cheiro é uma variação saborosa e aromática do clássico risoto italiano. A
+                        pimenta de cheiro, com seu perfume característico, adiciona um toque especial a essa receita,
+                        tornando-a uma opção única e deliciosa.</p>
                 </div>
                 <hr>
                 <div class="container text-center text-white">
@@ -70,63 +70,38 @@
 
                     <ul class="list-group bgFooter">
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            1 couve-flor
+                            Arroz Arbóreo ou Arroz normal – 66 g
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            Água fervente até cobrir
-                            <span class="badge bg-primary rounded-pill">1/2</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            1 colher de sopa de vinagre
+                            Caldo de Legumes – 333ml
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            1 colher de sopa de sal
+                            Manteiga – 9 g
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            Água fria até cobrir
-                            <span class="badge bg-primary rounded-pill">1</span>
-                        </li>
-                    </ul>
-                    <h2 class="corForte text-muted">Para a Parmegiana: </h2>
-
-                    <ul class="list-group bgFooter">
-                        <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            Floretes da couve-flor
+                            Cebola (média) – 1 unidade
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            Sal a gosto
-                            <span class="badge bg-primary rounded-pill">1/2</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            Pimenta-do-reino a gosto
+                            Vinho Branco – 90 ml
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            Páprica a gosto
+                            Pimenta de Cheiro – 16 g
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            Azeite a gosto
-                            <span class="badge bg-primary rounded-pill">1</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            Molho de tomate a gosto
-                            <span class="badge bg-primary rounded-pill">1</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center bgHeader2">
-                            Queijo mozzarella a gosto
+                            Parmesão Ralado – 35g
                             <span class="badge bg-primary rounded-pill">1</span>
                         </li>
                     </ul>
                     <br>
                     <!-- em quais ocasiões a receita é adequada -->
-                    <p class="corFraca">A Parmegiana de Couve-flor é uma excelente opção para refeições do dia a dia,
-                        especialmente para aqueles que buscam alternativas mais leves e vegetarianas. Pode ser servida
-                        como prato principal em almoços e jantares, sendo uma escolha versátil para qualquer ocasião.
+                    <p class="corFraca">O Risoto de Pimenta de Cheiro é uma escolha perfeita para impressionar em
+                        jantares especiais, comemorações ou simplesmente para saborear uma refeição gourmet em casa
                     </p>
                     <button type="button" class="btn bgForte btn-lg"><a href="#"
                             class="text-decoration-none text-white p-5">Saiba mais</a></button>
@@ -147,7 +122,8 @@
                                     <div class="conteudo">
                                         <h3>Branqueamento da Couve-flor</h3>
                                         <p>
-                                            Coloque a couve-flor em uma panela com água fervente
+                                            Limpe e retire as sementes e os filamentos brancos internos de todas as
+                                            pimentas.
                                         </p>
                                     </div>
                                     <div class="tempo">
@@ -156,9 +132,9 @@
                                 </li>
                                 <li>
                                     <div class="conteudo">
-                                        <h3>Branqueamento da Couve-flor</h3>
+                                        <h3>Corte as pimentas</h3>
                                         <p>
-                                            Coloque a couve-flor em uma panela com água fervente.
+                                            Corte as pimentas em pequenos cubos.
 
                                         </p>
                                     </div>
@@ -168,9 +144,9 @@
                                 </li>
                                 <li>
                                     <div class="conteudo">
-                                        <h3>Branqueamento da Couve-flor</h3>
+                                        <h3>Preparativos</h3>
                                         <p>
-                                            Adicione o vinagre e o sal.
+                                            Ferva as pimentas por 1 minuto, descarte a água e reserve as pimentas.
                                         </p>
                                     </div>
                                     <div class="tempo">
@@ -179,9 +155,10 @@
                                 </li>
                                 <li>
                                     <div class="conteudo">
-                                        <h3>Branqueamento da Couve-flor</h3>
+                                        <h3>Caldo de legumes</h3>
                                         <p>
-                                            Espere 2 minutos e, em seguida, coloque a couve-flor na água fria.
+                                            Refogue metade da cebola na manteiga, acrescente o arroz e continue
+                                            refogando.
                                         </p>
                                     </div>
                                     <div class="tempo">
@@ -190,9 +167,9 @@
                                 </li>
                                 <li>
                                     <div class="conteudo">
-                                        <h3>Parmegiana</h3>
+                                        <h3>Adicione o vinho</h3>
                                         <p>
-                                            Escorra a água e corte os floretes.
+                                            Adicione o vinho e, a partir desse momento, mexa continuamente o risoto.
                                         </p>
                                     </div>
                                     <div class="tempo">
@@ -201,9 +178,10 @@
                                 </li>
                                 <li>
                                     <div class="conteudo">
-                                        <h3>Parmegiana</h3>
+                                        <h3>Até o ponto ideal </h3>
                                         <p>
-                                            Em uma panela, coloque os floretes de couve-flor.
+                                            Quando o vinho evaporar, adicione aos poucos o caldo de legumes e as
+                                            pimentas.
                                         </p>
                                     </div>
                                     <div class="tempo">
@@ -212,9 +190,9 @@
                                 </li>
                                 <li>
                                     <div class="conteudo">
-                                        <h3>Parmegiana</h3>
+                                        <h3>Mexa bastante</h3>
                                         <p>
-                                            Tempere com sal, pimenta e páprica a gosto.
+                                            Continue mexendo até atingir o ponto desejado.
                                         </p>
                                     </div>
                                     <div class="tempo">
@@ -223,60 +201,15 @@
                                 </li>
                                 <li>
                                     <div class="conteudo">
-                                        <h3>Parmegiana</h3>
+                                        <h3>Acrescente o Parmesão</h3>
                                         <p>
-                                            Mexa e adicione o azeite.
+                                            Ao final, acrescente o queijo parmesão.
                                         </p>
                                     </div>
                                     <div class="tempo">
                                         <h4>Passo 8</h4>
                                     </div>
                                 </li>
-                                <li>
-                                    <div class="conteudo">
-                                        <h3>Parmegiana</h3>
-                                        <p>
-                                            Cozinhe até que a couve-flor esteja no ponto desejado e, em seguida, coloque em um refratário.
-                                        </p>
-                                    </div>
-                                    <div class="tempo">
-                                        <h4>Passo 9</h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="conteudo">
-                                        <h3>Parmegiana</h3>
-                                        <p>
-                                            Cubra com queijo mozzarella a gosto.
-                                        </p>
-                                    </div>
-                                    <div class="tempo">
-                                        <h4>Passo 10</h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="conteudo">
-                                        <h3>Parmegiana</h3>
-                                        <p>
-                                            Asse em forno preaquecido a 180 ºC até que o queijo esteja derretido e dourado.
-                                        </p>
-                                    </div>
-                                    <div class="tempo">
-                                        <h4>Passo 11</h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="conteudo">
-                                        <h3>Parmegiana</h3>
-                                        <p>
-                                            Sirva e desfrute!
-                                        </p>
-                                    </div>
-                                    <div class="tempo">
-                                        <h4>Passo 12</h4>
-                                    </div>
-                                </li>
-
                                 <div style="clear: both"></div>
                             </ul>
                         </section>
@@ -286,38 +219,26 @@
                         <div class="container aparecePcel  ">
                             <h2 class="corForte">Passo a passo</h2>
                             <h3 class="corForte">Passo 1</h3>
-                            <p class="fst-normal corFraca">Coloque a couve-flor em uma panela com água fervente </p>
+                            <p class="fst-normal corFraca">Limpe e retire as sementes e os filamentos brancos internos
+                                de todas as pimentas.</p>
                             <h3 class="corForte">Passo 2</h3>
-                            <p class="fst-normal corFraca">Coloque a couve-flor em uma panela com água fervente. </p>
+                            <p class="fst-normal corFraca">Corte as pimentas em pequenos cubos. </p>
                             <h3 class="corForte">Passo 3</h3>
-                            <p class="fst-normal corFraca">Adicione o vinagre e o sal. </p>
+                            <p class="fst-normal corFraca">Ferva as pimentas por 1 minuto, descarte a água e reserve as
+                                pimentas.</p>
                             <h3 class="corForte">Passo 4</h3>
-                            <p class="fst-normal corFraca">Espere 2 minutos e, em seguida, coloque a couve-flor na água fria.</p>
+                            <p class="fst-normal corFraca">Refogue metade da cebola na manteiga, acrescente o arroz e
+                                continue refogando.</p>
                             <h3 class="corForte">Passo 5</h3>
-                            <p class="fst-normal corFraca">Escorra a água e corte os floretes. </p>
+                            <p class="fst-normal corFraca">Adicione o vinho e, a partir desse momento, mexa
+                                continuamente o risoto. </p>
                             <h3 class="corForte">Passo 6</h3>
-                            <p class="fst-normal corFraca">Em uma panela, coloque os floretes de couve-flor. </p>
+                            <p class="fst-normal corFraca">Quando o vinho evaporar, adicione aos poucos o caldo de
+                                legumes e as pimentas.</p>
                             <h3 class="corForte">Passo 7</h3>
-                            <p class="fst-normal corFraca">Tempere com sal, pimenta e páprica a gosto. </p>
+                            <p class="fst-normal corFraca">Continue mexendo até atingir o ponto desejado.</p>
                             <h3 class="corForte">Passo 8</h3>
-                            <p class="fst-normal corFraca">Mexa e adicione o azeite. </p>
-                            <h3 class="corForte">Passo 9</h3>
-                            <p class="fst-normal corFraca">Cozinhe até que a couve-flor esteja no ponto desejado e, em seguida, coloque em um refratário</p>
-                            <h3 class="corForte">Passo 10</h3>
-                            <p class="fst-normal corFraca">Cubra com queijo mozzarella a gosto. </p>
-                            <h3 class="corForte">Passo 11</h3>
-                            <p class="fst-normal corFraca">Asse em forno preaquecido a 180 ºC até que o queijo esteja derretido e dourado. </p>
-                            <h3 class="corForte">Passo 12</h3>
-                            <p class="fst-normal corFraca">Sirva e desfrute! </p>
-                           <!--  <ul class="corFraca">
-                                <li>Criamos a coluna "curso" na tabela "cursos".</li>
-                                <li>Renomeamos as colunas para o padrão PT-BR.</li>
-                                <li>Alteramos o formato da data.</li>
-                                <li>Efetuamos correções na coluna "nome".</li>
-                                <li>Tratamos os dados nulos ou ausentes.</li>
-                            </ul>
-                            -->
-
+                            <p class="fst-normal corFraca">Ao final, acrescente o queijo parmesão.</p>
                         </div>
                     </section>
                 </div>
@@ -327,8 +248,8 @@
             <section id="scrollspyHeading3">
                 <div class="container text-center">
                     <h1 class="corForte">Resolução</h1>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IhUKu07aFkM?si=gF9GFlON866sOX9-"
-                        title="YouTube video player" frameborder="0"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/oKLv2YHuO0w"
+                        title="COMO FAZER RISOTO DE PIMENTA DE CHEIRO" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
